--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 	--link-shadow-color:           #540072;
 	--link-hover-text-color:       #0e0029;
 	--link-hover-background-color: #cf00b4 ;
-	--link-hover-shadow-color:     #b3009b;
+	--link-hover-shadow-color:     #002677;
 	
 	/** Footer **/
 }
@@ -61,10 +61,6 @@
 html {
 	width: 100%;
 	height: 100%;
-	
-	background-image: var(--background-image);
-	background-position: center;
-	background-size: cover;
 }
 body {
 	max-width: var(--content-max-width);
@@ -75,16 +71,25 @@ body {
 	color: var(--default-text-color);
 	line-height: var(--line-height);
 }
-#background {
+.overlay {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	top: 0%;
 	left: 0%;
-	z-index: -100;
-	
-	background-color: #0000006b;
 }
+#background {
+	background-image: var(--background-image);
+	background-position: center;
+	background-size: cover;
+	
+	z-index: -100;
+}
+#dark {
+	background-color: #0000006b;
+	z-index: -99;
+}
+
 header {
 	position: relative;
 }
