--- a/style.css
+++ b/style.css
@@ -29,17 +29,20 @@
 	--category-background-color:   #020000;
 	
 	/* Text */
-	--category-head-text-color:        #ff31b0;
+	--category-head-text-color:        #00c42a;
 	--category-head-text-shadow-color: #004a61;
 	--category-head-border-color:      #001572;
 	
 	--link-color:                  #01a0c9;
 	--link-shadow-color:           #540072;
 	--link-hover-text-color:       #0e0029;
-	--link-hover-background-color: #cf00b4 ;
-	--link-hover-shadow-color:     #002677;
+	--link-hover-background-color: #01a0c9 ;
+	--link-hover-shadow-color:     #bd00ad;
 	
 	/** Footer **/
+	--foot-text-color:          #1f0042;
+	--foot-text-shadow-color:   #8f006b;
+	--foot-text-shadow-color-2: #dfc800;
 }
 
 @keyframes clock {
@@ -52,6 +55,7 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
+	
 	-moz-user-select: -moz-none;
 	-khtml-user-select: none;
 	-webkit-user-select: none;
@@ -63,35 +67,19 @@ html {
 	height: 100%;
 }
 body {
-	max-width: var(--content-max-width);
-	margin: var(--vertical-margins) auto;
+	min-height: 100%;
+	min-width: 100%;
+	position: relative;
 	
 	font-family: var(--font-stack);
 	font-size: var(--default-text-size);
 	color: var(--default-text-color);
 	line-height: var(--line-height);
 }
-.overlay {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0%;
-	left: 0%;
-}
-#background {
-	background-image: var(--background-image);
-	background-position: center;
-	background-size: cover;
-	
-	z-index: -100;
-}
-#dark {
-	background-color: #0000006b;
-	z-index: -99;
-}
 
 header {
 	position: relative;
+	height: var(--vertical-margins);
 }
 header h1 {
 	color: var(--head-text-color);
@@ -100,8 +88,8 @@ header h1 {
 }
 div#liveClock {
 	position: absolute;
-	right: 0px;
-	top: 0px;
+	right: 1em;
+	top: 1em;
 	display: inline;
 }
 div#liveClock span {
@@ -109,16 +97,20 @@ div#liveClock span {
 }
 
 #content {
+	width: var(--content-max-width);
+	margin: 0 auto;
+	padding-bottom: 5em;
+	
 	text-align: center;
 }
 .category {
+	min-width: var(--category-width);
 	margin: 0px 1em;
 	margin-top: 2em;
-	min-width: var(--category-width);
 	display: inline-block;
 	vertical-align: top;
-	background-color: var(--category-background-color);
 	
+	background-color: var(--category-background-color);
 	box-shadow: 
 		-3px -3px 0px var(--category-upper-shadow-color),
 		3px 3px 0px var(--category-lower-shadow-color),
@@ -129,14 +121,15 @@ div#liveClock span {
 	border-bottom: 2px solid var(--category-lower-border-color);
 }
 .category h2 {
-	color: var(--category-head-text-color);
-	border-bottom: 3px solid var(--category-head-border-color);
-	text-shadow: 2px 2px var(--category-head-text-shadow-color);
 	padding: 5px;
 	
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 1.25em;
+	
+	color: var(--category-head-text-color);
+	border-bottom: 3px solid var(--category-head-border-color);
+	text-shadow: 2px 2px var(--category-head-text-shadow-color);
 }
 
 .sitelist {
@@ -210,4 +203,40 @@ div#liveClock span {
 
 .site, .rbtn {
 	cursor: pointer;
+}
+
+
+footer {
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+	left: 0px;
+	
+	padding-bottom: 2em;
+	text-align: center;
+}
+footer h1 {
+	display: inline-block;
+	color: var(--foot-text-color);
+	text-shadow: 2px 2px var(--foot-text-shadow-color);
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	
+	position: fixed;
+	top: 0%;
+	left: 0%;
+}
+#background {
+	z-index: -100;
+	
+	background-image: var(--background-image);
+	background-position: center;
+	background-size: cover;
+}
+#dark {
+	z-index: -99;
+	background-color: #0000001F;
 }
